...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="VCB Linker: " />

                    <CheckBox
                        android:id="@+id/chkLinkAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <RadioButton
                        android:id="@+id/radio_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LINK" />

                    <RadioButton
                        android:id="@+id/radio_unlink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UNLINK" />
                </RadioGroup>
            </LinearLayout>

...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Wallet transfer: " />

                        <CheckBox
                            android:id="@+id/chkTransfer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </LinearLayout>

                    <LinearLayout
...
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="App ID" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextAppID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3" />
            </LinearLayout>

            <LinearLayout
...
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="User Zalo ID: " />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextZaloUserID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1671417175338866297" />
                <!--1671417175338866297  7040082858573111800   8603984916740465452 7040082858573111800 8267894003753827574 8556823231627672308-->
            </LinearLayout>

...
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="App User:" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="160829000002502" />
                <!--160515000010001 160525000002509   160516000000501 160608000000002 7040082858573111800 160613000001001-->
            </LinearLayout>

...
                    android:layout_height="wrap_content"
                    android:text="Kim Nguyên Bảo để nâng cấp level" />
            </LinearLayout>


            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:text="PAY NOW" />
...
