...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/switch_button_margin"
        android:layout_toRightOf="@+id/dotView"
        android:background="@drawable/button_next" />
...
