...
            android:hint="@string/sdk_vcb_linkacc_account_hint"
            android:paddingTop="@dimen/margin_small"
            android:tag="@string/sdk_vcb_linkacc_account_hint"
            android:theme="@style/TextLabelHint">

            <vn.com.zalopay.wallet.view.custom.VPaymentDrawableEditText
                android:id="@+id/edt_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="@drawable/txt_bottom_default_style"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="text|textVisiblePassword"
...
            android:paddingTop="@dimen/margin_small"
            android:tag="@string/sdk_vcb_linkacc_password_hint"
            android:theme="@style/TextLabelHint"
            app:passwordToggleEnabled="false">

            <vn.com.zalopay.wallet.view.custom.VPaymentDrawableEditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="@drawable/txt_bottom_default_style"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textPassword"
...
